<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">驾考秘典</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="rotate3d_name1">请选择科目</string>
    <string name="sliding_menu_name">驾考秘典</string>
    <string name="tv_answer_true">恭喜您，答对了</string>
    <string name="tv_explain">最佳解释</string>
    <string name="tv_difficulty">难度 : </string>
    <string name="bt_ok">确认</string>
    <string name="bt_cancel">取消</string>
    <string name="next_questions">是否自动跳转下一题</string>
    <string name="show_point">是否默认展开提示</string>
    <string name="show_delete">是否移除错题</string>
    <string name="set_up">设置</string>

</resources>
