<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_custom_dialog_with_btns"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48.0dip" >

            <TextView
                android:id="@+id/title_choices"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="15.0dip"
                android:paddingRight="15.0dip"
                android:text="@string/set_up"
                android:textColor="@color/white"
                android:textSize="18.0dip" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/two_choices_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dip" >

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_height="wrap_content" >
                <TextView
	                android:id="@+id/choice_one_text"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.16"
	                android:textColor="@color/gray"
	                android:layout_marginLeft="30dip"
	                android:text="@string/next_questions"
	                android:textSize="16.0dip" />

                <ImageView
                    android:id="@+id/iv_table_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dip"
                    android:src="@drawable/table_off" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dip"
                    android:layout_weight="0.16"
                    android:text="@string/show_point"
                    android:textColor="@color/gray"
                    android:textSize="16.0dip" />

                <ImageView
                    android:id="@+id/iv_table_off1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dip"
                    android:background="@drawable/table_off" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_panel"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1.0" >

        <LinearLayout
            android:id="@+id/two_btn_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/right_btn_ok"
                android:layout_width="100dip"
                android:layout_height="30dip"
                android:background="@drawable/bt_selector"
                android:text="@string/bt_ok"
                android:textColor="#85CB62"
                android:textSize="18.0dip" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>